// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<label
  className="root   rootLayoutVertical   "
  htmlFor="test"
  id="test__label"
>
  <div
    className="field"
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      id="test"
      name="test"
      onChange={null}
      required={false}
      type="checkbox"
    />
    <div
      className="label "
      id="test__labelText"
    >
      label
    </div>
  </div>
</label>
`;

exports[`rendering renders correctly with all props 1`] = `
<label
  className="root isRootInFormLayout  rootLayoutHorizontal isRootDisabled isRootRequired isRootStateWarning"
  htmlFor="test"
  id="test__label"
>
  <div
    className="field"
  >
    <input
      checked={true}
      className="input"
      disabled={true}
      id="test"
      name="test"
      onChange={null}
      required={true}
      type="checkbox"
      value="value"
    />
    <div
      className="label "
      id="test__labelText"
    >
      label
    </div>
  </div>
  <div
    className="helpText"
    id="test__helpText"
  >
    some help
  </div>
  <div
    className="validationText"
    id="test__validationText"
  >
    some error
  </div>
</label>
`;
